--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -11,6 +11,7 @@ tornado = "^6.1"
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
 flake8 = "*"
+autopep8 = "*"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
