--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -2,7 +2,7 @@
 name = "server"
 version = "0.1.0"
 description = ""
-authors = ["Your Name <example@email.com>"]
+authors = ["Alexandru Ică", "Gherghina Roxana-Ioana", "Arsene Marinel", "Cioarec George", "Tudose Mihai Cristian"]
 
 [tool.poetry.dependencies]
 python = ">=3.8"
