--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,7 +6,9 @@ authors = ["Alexandru Ică", "Gherghina Roxana-Ioana", "Arsene Marinel", "Cioare
 
 [tool.poetry.dependencies]
 python = ">=3.8"
-tornado = "^6.1"
+fastapi = "*"
+uvicorn = "0.13.4"
+websockets = "*"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
