Testing jobs should not be named 'static_analysis'

--- a/.github/workflows/Testing.yml
+++ b/.github/workflows/Testing.yml
@@ -5,7 +5,7 @@ on:
         branches: [fastapi]
 
 jobs:
-    static_analysis:
+    testing:
         strategy:
             matrix:
                 os: [ubuntu-latest, macos-latest, windows-latest]
