--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,6 +9,7 @@ python = ">=3.8"
 fastapi = "*"
 uvicorn = "0.13.4"
 websockets = "*"
+bcrypt = "3.2.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
